--- a/Server/package.json
+++ b/Server/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Supun Dileepa",
+  "author": "Team Synyd",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
