--- a/Server/package.json
+++ b/Server/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "tsc",
     "client-install": "npm install --prefix client",
-    "start": "nodemon server.js",
+    "start": "nodemon ./build/server.js",
     "server": "nodemon server.js ",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "prod": "npm run build && npm run start"
   },
   "author": "Team Synyd",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.1",
+    "@types/mongoose": "^5.2.12",
+    "@types/mongoose-unique-validator": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
@@ -24,6 +29,7 @@
     "mongoose-unique-validator": "^2.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "typescript": "^3.0.3",
     "validator": "^10.1.0"
   },
   "devDependencies": {
