--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
     "@types/mongoose": "^5.2.12",
     "@types/mongoose-unique-validator": "^1.0.1",
     "bcryptjs": "^2.4.3",
