--- a/Server/package.json
+++ b/Server/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.17",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-auto-increment-fix": "^5.0.2",
     "mongoose-unique-validator": "^2.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
