--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.16.0",
     "@types/mongoose": "^5.2.12",
     "@types/mongoose-unique-validator": "^1.0.1",
+    "@types/passport": "^0.4.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
