--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "react-loadable": "^5.5.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
+    "react-star-ratings": "^2.3.0",
     "react-test-renderer": "^16.4.2",
     "reactstrap": "^6.4.0",
     "simple-line-icons": "^2.4.1"
