--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.0.5",
+    "alertifyjs": "^1.11.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
