--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "core-js": "^2.5.7",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
+    "enzyme-to-json": "^3.3.4",
     "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.6.2",
@@ -26,6 +27,7 @@
     "react-loadable": "^5.5.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.0.0",
     "react-test-renderer": "^16.4.2",
     "reactstrap": "^6.4.0",
     "simple-line-icons": "^2.4.1"
