--- a/Client/package.json
+++ b/Client/package.json
@@ -23,12 +23,14 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-chartjs-2": "^2.7.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.2",
     "react-loadable": "^5.5.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0",
     "react-test-renderer": "^16.4.2",
+    "react-transition-group": "^2.5.0",
     "reactstrap": "^6.4.0",
     "simple-line-icons": "^2.4.1"
   },
