--- a/Client/package.json
+++ b/Client/package.json
@@ -30,9 +30,10 @@
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0",
     "react-test-renderer": "^16.4.2",
-    "react-transition-group": "^2.5.0",
+    "react-transition-group": "^1.1.2",
     "reactstrap": "^6.4.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "spy": "^1.0.0"
   },
   "devDependencies": {
     "babel-jest": "^23.4.2",
